some refactors on Fragment, add some tests. omit unique-validation (Select From Where ...) for now.